# responses/contest_responses.go
@@ -1,0 +1,16 @@
+package responses
+
+import "time"
+
+type (
+	ContestResponse struct {
+		ID         uint
+		Title      string
+		Content    string
+		ProblemIds []uint
+		StartedAt  time.Time
+		EndedAt    time.Time
+		CreatedAt  time.Time
+		UpdatedAt  time.Time
+	}
+)
